--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/nodemon": "^1.19.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "moongose": "^1.0.0"
   }
 }
